--- a/frontend/src/css/select-editor.css
+++ b/frontend/src/css/select-editor.css
@@ -1,4 +1,4 @@
-.permission-editor .permission-editor-explanation {
+.permission-editor-explanation {
   user-select: none;
   padding-left: 10px;
   color: #9c9c9c;
@@ -32,17 +32,17 @@
   padding: 0 0.5rem;
 }
 
-.permission-editor .permission-editor__menu .permission-editor__option--is-disabled {
+.permission-editor__menu .permission-editor__option--is-disabled {
   color: #9c9c9c;
   border-top: 1px solid #dedede;
 }
 
-.permission-editor .permission-editor__menu .permission-editor__option--is-disabled:hover {
+.permission-editor__menu .permission-editor__option--is-disabled:hover {
   background-color: #f0f0f0 !important;
   color: #9c9c9c !important;
 }
 
-.permission-editor .btn-add-custom-permission {
+.permission-editor-btn-add-custom-permission {
   display: flex;
   align-items: center;
   padding: .5rem 0;
@@ -50,7 +50,7 @@
   line-height: 13px;
 }
 
-.permission-editor .btn-add-custom-permission .fa {
+.permission-editor-btn-add-custom-permission .fa {
   font-size: 12px;
   line-height: 13px;
   margin-right: .25rem;
