[search] keep the query keyword when entering the independent search page via clicking the link icon in the top-right 'search'

--- a/seahub/search/templates/search_results_react.html
+++ b/seahub/search/templates/search_results_react.html
@@ -9,10 +9,10 @@
     <script type="text/javascript">
       window.search = {
         pageOptions: {
-          q: '{{ keyword }}',
-          search_repo: '{{ search_repo }}',
-          search_ftypes: '{{ search_ftypes }}',
-          repo_name:'{{ repo.name }}',
+          q: '{{ keyword|escapejs }}',
+          search_repo: '{{ search_repo|escapejs }}',
+          search_ftypes: '{{ search_ftypes|escapejs }}',
+          repo_name:'{{ repo.name|escapejs }}',
         }
       }
     </script>
