--- a/seahub/templates/react_app.html
+++ b/seahub/templates/react_app.html
@@ -1,5 +1,6 @@
 {% extends "base_for_react.html" %}
 {% load render_bundle from webpack_loader %}
+{% load seahub_tags %}
 
 {% block extra_style %}
 {% render_bundle 'app' 'css' %}
@@ -20,5 +21,17 @@
     app.pageOptions[key] = newOptions[key];
   }
 </script>
+{% if request_from_onlyoffice_desktop_editor %}
+<script type="text/javascript">
+  var params = {
+    "displayName": "{{request.user.username|email2nickname|escapejs}}",
+    "email": "{{request.user.username|escapejs}}",
+    "domain": "{{service_url}}",
+    "provider": "{{site_name}}",
+    "userId": "{{request.user.username|escapejs}}",
+  };
+  window.AscDesktopEditor.execCommand('portal:login', JSON.stringify(params));
+</script>
+{% endif %}
 {% render_bundle 'app' 'js' %}
 {% endblock %}
