--- a/seahub/templates/registration/logout.html
+++ b/seahub/templates/registration/logout.html
@@ -8,3 +8,13 @@
 	<p>{% trans "Thanks for your participation! " %}<a href="{{ SITE_ROOT }}accounts/login/">{% trans "Log in again" %}</a></p>
 </div>
 {% endblock %}
+{% block extra_script %}
+{% if request_from_onlyoffice_desktop_editor %}
+<script type="text/javascript">
+  var params = {
+    "domain": "{{service_url}}",
+  };
+  window.AscDesktopEditor.execCommand('portal:logout', JSON.stringify(params));
+</script>
+{% endif %}
+{% endblock %}
