--- a/seahub/templates/view_file_onlyoffice.html
+++ b/seahub/templates/view_file_onlyoffice.html
@@ -119,6 +119,18 @@ html, body { padding:0; margin:0; height:100%; }
     interval = setInterval(refreshLock, 40 * 60 * 1000);
     {% endif %}
 </script>
+{% if request_from_onlyoffice_desktop_editor %}
+<script type="text/javascript">
+    var params = {
+      "displayName": "{{request.user.username|email2nickname|escapejs}}",
+      "email": "{{request.user.username|escapejs}}",
+      "domain": "{{service_url}}",
+      "provider": "{{site_name}}",
+      "userId": "{{request.user.username|escapejs}}",
+    };
+    window.AscDesktopEditor.execCommand('portal:login', JSON.stringify(params));
+</script>
+{% endif %}
 {% if enable_watermark %}
 <script type="text/javascript" src="{{ MEDIA_URL }}js/watermark.js"></script>
 <script type="text/javascript">{% include "snippets/add_watermark.html" %}</script>
