[shared dir view] current path & operation buttons: fixup & improvement

--- a/media/css/seahub_react.css
+++ b/media/css/seahub_react.css
@@ -117,6 +117,7 @@ a:hover { color:#eb8205; }
 .vam { vertical-align:middle; }
 .flex-auto { flex:auto; }
 .flex-1 { flex:1; }
+.flex-none { flex: none; }
 .hide { display:none; }
 .error { color:red; }
 .no-deco,
