--- a/seahub/templates/wiki/wiki.html
+++ b/seahub/templates/wiki/wiki.html
@@ -1,5 +1,14 @@
 {% extends "base_for_react.html" %}
 {% load render_bundle from webpack_loader %}
+{% load seahub_tags %}
+{% block extra_ogp_tags %}
+<meta property="og:type" content="website" />
+<meta property="og:site_name" content="{{ site_name }}">
+<meta property="og:url" content="{{ service_url }}{{ request.path }}" />
+<meta property="og:title" content="{{ repo_name }}" />
+<meta property="og:image" content="{{ service_url }}{{ MEDIA_URL }}img/file/{{ filename|file_icon_filter }}" />
+<meta property="og:description" content="{{ filename }}" />
+{% endblock %}
 {% block extra_style %}
 {% render_bundle 'wiki' 'css' %}
 {% endblock %}
