--- a/media/css/print_for_md_file_view.css
+++ b/media/css/print_for_md_file_view.css
@@ -14,6 +14,7 @@
 .seafile-editor-main-panel {
   display: block!important;
   width: 100%!important;
+  background-color: #fff!important;
 }
 .seafile-editor-resize,
 .seafile-editor-side-panel {
