[system admin] terms and conditions: fixed icons for the terms editor

--- a/seahub/templates/sysadmin/sysadmin_react_app.html
+++ b/seahub/templates/sysadmin/sysadmin_react_app.html
@@ -2,6 +2,10 @@
 {% load seahub_tags i18n %}
 {% load render_bundle from webpack_loader %}
 
+{% block extra_style %}
+<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/seafile-editor-font/seafile-editor-font.css" />
+{% endblock %}
+
 {% block extra_script %}
 <script type="text/javascript">
 	window.sysadmin = {
