Fix #5131 (but only for OnlyOffice)
This has to be augmented with something more sophisticated regarding the
other variants of only file editing services.

But I wanted to just proof that it can work this way.
Use this PR or don't ;-)

--- a/seahub/templates/base_for_react.html
+++ b/seahub/templates/base_for_react.html
@@ -140,6 +140,7 @@
             additionalAppBottomLinks: {% if additional_app_bottom_links %} {{ additional_app_bottom_links|safe }} {% else %} null {% endif %},
             additionalAboutDialogLinks: {% if additional_about_dialog_links %} {{ additional_about_dialog_links|safe }} {% else %} null {% endif %},
             enableOnlyoffice: {% if enableOnlyoffice %} true {% else %} false {% endif %},
+            onlyofficeEditFileExtension: {% if onlyofficeEditFileExtension %} JSON.parse('{{ onlyofficeEditFileExtension | escapejs }}') {% else %} {{ '[]' }} {% endif %},
             onlyofficeConverterExtensions: {% if onlyofficeConverterExtensions %} {{onlyofficeConverterExtensions|safe}} {% else %} null {% endif %}
         }
      };
