--- a/frontend/src/css/file-view.css
+++ b/frontend/src/css/file-view.css
@@ -61,12 +61,12 @@ body {
     opacity: 1;
   }
 }
-/* for mobile */
+ /* for mobile */
 .file-view-body .seafile-comment {
   width: 100%;
 }
 @media (min-width: 768px) {
   .file-view-body .seafile-comment {
-    width: 29%;
+    width: 300px;
   }
 }
