--- a/frontend/src/css/draft.css
+++ b/frontend/src/css/draft.css
@@ -15,9 +15,7 @@
   width: 100%;
   height: 100%;
   display: flex;
-  flex-flow:  row nowrap;
-  justify-content: space-between;
-  box-sizing: border-box;
+  flex-flow: row nowrap;
   background-color: #fafaf9;
 }
 
@@ -29,18 +27,8 @@
 .main .cur-view-right-part {
   height: 100%;
   width: 300px;
+  flex-shrink: 0;
   position: relative;
-}
-
-.seafile-comment-resize {
-  width: 5px;
-  height: 100%;
-  background-color: transparent;
-  position: absolute;
-  left: 0;
-  top: 0;
-  cursor: col-resize;
-  z-index: 1;
 }
 
 .cur-file-info .file-info {
