[shared file view] markdown: display the 'table of content'

--- a/frontend/src/css/shared-file-view.css
+++ b/frontend/src/css/shared-file-view.css
@@ -47,6 +47,7 @@
   overflow: auto;
 }
 
+/*
 .shared-file-view-body .md-view {
   min-height: 400px;
   padding: 70px 75px;
@@ -56,6 +57,21 @@
   width: 950px;
   background: #fff;
   overflow: auto;
+}
+*/
+.shared-file-view-body .article {
+    min-height: calc(100% - 40px);
+    background: #fff;
+    padding: 40px 60px;
+    margin: 20px 40px;
+    border: 1px solid #e6e6dd;
+}
+
+.shared-file-view-body .seafile-markdown-outline {
+  position: static;
+  width: 300px;
+  border-left: 1px solid #e6e6dd;
+  flex-shrink: 0;
 }
 
 @media (max-width: 991.98px) {
