--- a/seahub/templates/draft.html
+++ b/seahub/templates/draft.html
@@ -2,6 +2,7 @@
 {% load render_bundle from webpack_loader %}
 
 {% block extra_style %}
+<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/seafile-editor-font/seafile-editor-font.css" />
 {% render_bundle 'draft' 'css' %}
 {% endblock %}
 
