Add seafile editor font for external html

--- a/seahub/templates/shared_file_view_react.html
+++ b/seahub/templates/shared_file_view_react.html
@@ -13,6 +13,7 @@
 
 {% block extra_style %}
 {% if filetype == 'Markdown' %}
+    <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/seafile-editor-font/seafile-editor-font.css" />
     {% render_bundle 'sharedFileViewMarkdown' 'css' %}
 {% elif filetype == 'Text' %}
     {% render_bundle 'sharedFileViewText' 'css' %}
