--- a/seahub/templates/wiki/wiki.html
+++ b/seahub/templates/wiki/wiki.html
@@ -10,6 +10,7 @@
 <meta property="og:description" content="{{ filename }}" />
 {% endblock %}
 {% block extra_style %}
+<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/seafile-editor-font/seafile-editor-font.css" />
 {% render_bundle 'wiki' 'css' %}
 {% endblock %}
 
