--- a/seahub/templates/base_for_react.html
+++ b/seahub/templates/base_for_react.html
@@ -28,6 +28,7 @@
 <body>
     <div id="wrapper" class="{{ LANGUAGE_CODE }}"></div>
     <div id="modal-wrapper" class="{{ LANGUAGE_CODE }}"></div>
+    {%block extra_content %}{% endblock %}
 
 <script type="text/javascript">
     window.app = {
