--- a/seahub/templates/react_app.html
+++ b/seahub/templates/react_app.html
@@ -3,6 +3,7 @@
 {% load seahub_tags %}
 
 {% block extra_style %}
+<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/seafile-editor-font/seafile-editor-font.css" />
 {% render_bundle 'app' 'css' %}
 {% endblock %}
 
