--- a/seahub/templates/wiki/wiki.html
+++ b/seahub/templates/wiki/wiki.html
@@ -18,7 +18,7 @@
 
 {% block extra_content %}
 {% if not is_dir %}
-<div id="wiki-file-content" class="{{ LANGUAGE_CODE }}">{{ file_content }}</div>
+<div id="wiki-file-content" class="{{ LANGUAGE_CODE }} article">{{ file_content }}</div>
 {% endif %}
 {% endblock %}
 
