--- a/frontend/src/css/wiki.css
+++ b/frontend/src/css/wiki.css
@@ -43,6 +43,12 @@
   margin-top: 14px;
 }
 
+.wiki-pages-container .wiki-index-page {
+  margin-top: 20px;
+  margin-left: 2rem;
+  color: #eb8205;
+}
+
 .wiki-md-viewer-rendered-content {
   padding: 30px 0 0;
 }
@@ -72,12 +78,20 @@ img[src=""] {
 }
 
 .cur-view-content .wiki-page-container {
-  margin: -0.625rem -1rem -1.25rem;
-  padding: 0.625rem 1rem 1.25rem;
+  margin: 0 -1rem -1.25rem;
+  padding: 30px 1rem 1.25rem;
   display: flex;
   flex: 1;
   padding-left: 30px;
   overflow-y: auto;
+}
+
+.wiki-main-panel .cur-view-content .article {
+  padding: 0 10px;
+}
+
+.wiki-main-panel .cur-view-content .article h1 {
+  margin-top: 0;
 }
 
 .cur-view-content .wiki-page-container .outline-h2,
@@ -106,10 +120,10 @@ img[src=""] {
   padding-right: 30px;
 }
 
-.cur-view-content .markdown-outline {
+.cur-view-content .wiki-page-content .seafile-markdown-outline {
   position: fixed;
   padding-right: 1rem;
-  top: 97px;
+  top: 79px;
   right: 0;
   width: 200px;
   overflow: hidden;
