use head and repo name as title on wiki page

--- a/seahub/templates/wiki/wiki.html
+++ b/seahub/templates/wiki/wiki.html
@@ -15,7 +15,7 @@
 {% render_bundle 'wiki' 'css' %}
 {% endblock %}
 
-{% block sub_title %} {{filename}} - {% endblock %}
+{% block wiki_title %} {{h1_head_content}} - {% verbatim %} { {% endverbatim %}{{repo_name}}{% verbatim %} } {% endverbatim %}{% endblock %}
 
 {% block extra_content %}
 {% if not is_dir %}
