--- a/seahub/templates/base_for_react.html
+++ b/seahub/templates/base_for_react.html
@@ -4,7 +4,7 @@
 <!DOCTYPE html>
 <html lang="{{ LANGUAGE_CODE }}">
 <head>
-<title>{% block sub_title %}{% endblock %}{{ site_title }}</title>
+<title>{% block wiki_title %}{% block sub_title %}{% endblock %}{{ site_title }}{% endblock %}</title>
 <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="{% trans "File, Collaboration, Team, Organization" %}" />
 {% if site_description != '' %}<meta name="description" content="{{ site_description }}" />{% endif %}
