use head and repo name as title on wiki page (#5230)
* use head and repo name as title on wiki page

* update

* update page title by change file

* optimize style

* fix unordered_list display

* update translation

Co-authored-by: lian <lian@seafile.com>
Co-authored-by: shuntian <978987373@qq.com>
Co-authored-by: 王健辉 <40563566+mrwangjianhui@users.noreply.github.com>

--- a/seahub/templates/wiki/wiki.html
+++ b/seahub/templates/wiki/wiki.html
@@ -15,7 +15,7 @@
 {% render_bundle 'wiki' 'css' %}
 {% endblock %}
 
-{% block sub_title %} {{filename}} - {% endblock %}
+{% block wiki_title %} {{h1_head_content}} - {{repo_name}}{% endblock %}
 
 {% block extra_content %}
 {% if not is_dir %}
