[top toolbar] fixed the position of the vertical line between 2 sides
- fixed it for all the pages
- removed the duplicated 'div.main-panel' in 'lib-content-view'

--- a/frontend/src/css/toolbar.css
+++ b/frontend/src/css/toolbar.css
@@ -11,7 +11,7 @@
 .border-left-show:before {
   position: absolute;
   top: 10px;
-  left: 0;
+  left: -1px;
   width: 1px;
   height: 30px;
   content: '';
