--- a/media/css/seahub_react.css
+++ b/media/css/seahub_react.css
@@ -729,17 +729,9 @@ a:hover { color:#eb8205; }
     position:relative;
     width: 32px;
 }
-#notifications .no-deco {
+#notice-icon {
     position: relative;
     display: block;
-    width: 100%;
-    height: 100%;
-}
-#notifications .sf2-icon-bell {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
 }
 @media (max-width: 390px) {
     #notifications {
@@ -765,17 +757,20 @@ a:hover { color:#eb8205; }
     font-size:24px;
     line-height:1;
     color:#999;
+    vertical-align: middle;
 }
 #notifications .num {
-    position:absolute;
-    color:#fff;
-    font-size:12px;
-    line-height:1;
-    padding:1px 2px;
-    background:#feac74;
-    border:1px solid #cb8a5d;
-    top:0;
-    left:15px;
+    position: absolute;
+    top: -3px;
+    left: 12px;
+    width: 16px;
+    height: 16px;
+    color: #fff;
+    font-size: 9px;
+    line-height: 16px;
+    text-align: center;
+    background: #fc6440;
+    border-radius: 100%;
 }
 #notice-popover {
     top:38px;
