--- a/media/css/seahub_react.css
+++ b/media/css/seahub_react.css
@@ -384,8 +384,12 @@ a:hover { color:#eb8205; }
 
 #my-info {
     display:inline-block;
-    color:#d6d6d6;
+    color: #bdbdbd;
     cursor:pointer;
+}
+
+#my-info:hover {
+    color: #9e9e9e;
 }
 
 #account .avatar {
